Update page content.

--- a/src/main/webapp/admin/index.html
+++ b/src/main/webapp/admin/index.html
@@ -16,12 +16,12 @@
     <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-    <script src="../static/js/admin/jquery.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/jquery.bootstrap.min.js"></script>
-    <script src="../dwr/engine.js"></script>
-    <script src="../dwr/interface/AdminManager.js"></script>
-    <script src="../static/js/admin/admin.js"></script>
+    <script src="/static/js/admin/jquery.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/jquery.bootstrap.min.js"></script>
+    <script src="/dwr/engine.js"></script>
+    <script src="/dwr/interface/AdminManager.js"></script>
+    <script src="/static/js/admin/admin.js"></script>
 </head>
 <body>
 <div class="container">
@@ -162,10 +162,10 @@
 </div>
 <div class="copy-right text-center">
     <div class="container">
-        <label id="label" class="navbar-fixed-bottom">Copyright of Meng Li © 2014 - 2017. All rights reserved.
+        <label id="label" class="navbar-fixed-bottom">Copyright of Meng Li © 2014 - 2018. All rights reserved.
             鄂ICP备15010075号-1</label>
     </div>
 </div>
-<script src="../static/js/universe.js"></script>
+<script src="/static/js/universe.js"></script>
 </body>
 </html>
