--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -6,18 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description"
           content="This is Meng Li's home page, you can visit my github, works and read my blogs. Have a awesome day!">
-    <link rel="Shortcut Icon" href="static/images/favicon.ico">
-    <link href="static/css/bootstrap.min.css" rel="stylesheet"/>
-    <link href="static/css/bootstrap.photo.css" rel="stylesheet"/>
-    <link href="static/css/style.css" rel="stylesheet"/>
-    <link href="static/css/index.css" rel="stylesheet"/>
-    <script src="static/js/admin/jquery.min.js"></script>
-    <script src="static/js/jquery.i18n.properties.min.js"></script>
-    <script src="static/js/bootstrap.min.js"></script>
-    <script src="static/js/bootstrap.photo.js"></script>
-    <script src="static/js/mengular.js"></script>
-    <script src="static/js/tools.js"></script>
-    <script src="static/js/blog/index.js"></script>
+    <link rel="Shortcut Icon" href="/static/images/favicon.ico">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/static/css/bootstrap.photo.css" rel="stylesheet"/>
+    <link href="/static/css/style.css" rel="stylesheet"/>
+    <link href="/static/css/index.css" rel="stylesheet"/>
+    <script src="/static/js/admin/jquery.min.js"></script>
+    <script src="/static/js/jquery.i18n.properties.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.photo.js"></script>
+    <script src="/static/js/mengular.js"></script>
+    <script src="/static/js/tools.js"></script>
+    <script src="/static/js/blog/index.js"></script>
 </head>
 <body>
 <div id="home" class="header">
@@ -74,7 +74,7 @@
         </div>
         <div class="col-sm-3 col-md-2">
             <a href="https://github.com/lm2343635" target="_block">
-                <img src="static/images/github-qrcode.png" class="qrcode"/>
+                <img src="/static/images/github-qrcode.png" class="qrcode"/>
             </a>
         </div>
     </div>
@@ -85,13 +85,13 @@
             <h1 class="text-center">@{education}</h1>
         </div>
         <div class="col-xs-12 col-sm-4">
-            <img src="static/images/nefu.png">
+            <img src="/static/images/nefu.png">
         </div>
         <div class="col-xs-12 col-sm-4">
-            <img src="static/images/kit.png">
+            <img src="/static/images/kit.png">
         </div>
         <div class="col-xs-12 col-sm-4">
-            <img src="static/images/ut.png">
+            <img src="/static/images/ut.png">
         </div>
     </div>
 </div>
@@ -128,19 +128,19 @@
             <h1 class="text-center">@{web_application}</h1>
         </div>
         <div class="col-xs-6 col-sm-3">
-            <img src="static/images/java.png">
+            <img src="/static/images/java.png">
             <p class="text-center">Java</p>
         </div>
         <div class="col-xs-6 col-sm-3">
-            <img src="static/images/html.png">
+            <img src="/static/images/html.png">
             <p class="text-center">HTML</p>
         </div>
         <div class="col-xs-6 col-sm-3">
-            <img src="static/images/css.png">
+            <img src="/static/images/css.png">
             <p class="text-center">CSS</p>
         </div>
         <div class="col-xs-6 col-sm-3">
-            <img src="static/images/javascript.png">
+            <img src="/static/images/javascript.png">
             <p class="text-center">JavaScript</p>
         </div>
     </div>
@@ -148,13 +148,13 @@
 <div class="block production">
     <div class="container">
         <div class="col-xs-12">
-            <h1 class="text-center">@{blog}<img src="static/images/java.png" class="devlang"></h1>
+            <h1 class="text-center">@{blog}<img src="/static/images/java.png" class="devlang"></h1>
         </div>
         <div class="col-sm-6 col-md-4">
-            <img src="static/images/blog2.png" class="screenshoot">
+            <img src="/static/images/blog2.png" class="screenshoot">
         </div>
         <div class="col-sm-6 col-md-4">
-            <img src="static/images/blog1.png" class="screenshoot">
+            <img src="/static/images/blog1.png" class="screenshoot">
         </div>
         <div class="col-sm-8 col-md-4">
             <h3>@{blog_title}</h3>
@@ -166,14 +166,14 @@
             </ul>
         </div>
         <div class="col-sm-4 col-md-4">
-            <img src="static/images/blog-qrcode.png" class="qrcode">
+            <img src="/static/images/blog-qrcode.png" class="qrcode">
             <a href="http://fczm.pw"><p class="text-center">http://fczm.pw</p></a>
         </div>
     </div>
 </div>
 <div class="block production deep">
     <div class="container">
-        <h1 class="text-center">@{easy_finance}<img src="static/images/java.png" class="devlang"></h1>
+        <h1 class="text-center">@{easy_finance}<img src="/static/images/java.png" class="devlang"></h1>
         <div class="col-sm-4">
             <h3>@{easy_finance_title}</h3>
             <ul>
@@ -182,11 +182,11 @@
                 <li>@{easy_finance_introduction_3}</li>
                 <li>@{easy_finance_introduction_4}</li>
             </ul>
-            <img src="static/images/easy-qrcode.png" class="qrcode">
+            <img src="/static/images/easy-qrcode.png" class="qrcode">
             <a href="http://easy.fczm.pw"><p class="text-center">http://easy.fczm.pw</p></a>
         </div>
         <div class="col-sm-8">
-            <img src="static/images/easy.png" class="screenshoot">
+            <img src="/static/images/easy.png" class="screenshoot">
         </div>
     </div>
 </div>
@@ -196,11 +196,11 @@
             <h1 class="text-center">@{ios_application}</h1>
         </div>
         <div class="col-xs-6">
-            <img src="static/images/objc.png">
+            <img src="/static/images/objc.png">
             <p class="text-center">Objective-C</p>
         </div>
         <div class="col-xs-6">
-            <img src="static/images/swift.png">
+            <img src="/static/images/swift.png">
             <p class="text-center">Swift</p>
         </div>
     </div>
@@ -208,13 +208,13 @@
 <div class="block production deep">
     <div class="container">
         <div class="col-xs-12">
-            <h1 class="text-center">@{rate}<img src="static/images/objc.png" class="devlang"></h1>
+            <h1 class="text-center">@{rate}<img src="/static/images/objc.png" class="devlang"></h1>
         </div>
         <div class="col-sm-6 col-md-4">
-            <img src="static/images/rate1.png" class="screenshoot">
+            <img src="/static/images/rate1.png" class="screenshoot">
         </div>
         <div class="col-sm-6 col-md-4">
-            <img src="static/images/rate2.png" class="screenshoot">
+            <img src="/static/images/rate2.png" class="screenshoot">
         </div>
         <div class="col-sm-8 col-md-4">
             <h3>@{rate_title}</h3>
@@ -225,9 +225,9 @@
             </ul>
         </div>
         <div class="col-sm-4 col-md-4">
-            <img src="static/images/rate-qrcode.png" class="qrcode">
+            <img src="/static/images/rate-qrcode.png" class="qrcode">
             <a href="https://itunes.apple.com/app/rate-assistant-monitor-rate/id1139573801" target="_blank">
-                <img src="static/images/appstore.png" class="appstore">
+                <img src="/static/images/appstore.png" class="appstore">
             </a>
         </div>
     </div>
@@ -235,13 +235,13 @@
 <div class="block production">
     <div class="container">
         <div class="col-xs-12">
-            <h1 class="text-center">@{httper}<img src="static/images/swift.png" class="devlang"></h1>
+            <h1 class="text-center">@{httper}<img src="/static/images/swift.png" class="devlang"></h1>
         </div>
         <div class="col-sm-6 col-md-4">
-            <img src="static/images/httper1.png" class="screenshoot">
+            <img src="/static/images/httper1.png" class="screenshoot">
         </div>
         <div class="col-sm-6 col-md-4">
-            <img src="static/images/httper2.png" class="screenshoot">
+            <img src="/static/images/httper2.png" class="screenshoot">
         </div>
         <div class="col-sm-8 col-md-4">
             <h3>@{httper_title}</h3>
@@ -252,9 +252,9 @@
             </ul>
         </div>
         <div class="col-sm-4 col-md-4">
-            <img src="static/images/httper-qrcode.png" class="qrcode">
+            <img src="/static/images/httper-qrcode.png" class="qrcode">
             <a href="https://itunes.apple.com/app/httper/id1166884043" target="_blank">
-                <img src="static/images/appstore.png" class="appstore">
+                <img src="/static/images/appstore.png" class="appstore">
             </a>
         </div>
     </div>
@@ -266,8 +266,7 @@
     </div>
 </div>
 <div class="contact-map">
-    <iframe src="http://www.google.cn/maps/embed?pb=!1m18!1m12!1m3!1d3223.3108189184054!2d140.0993196!3d36.11028470000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60220bff098eef6f%3A0x38f8406069ed2e60!2z562R5rOi5aSn5a2m!5e0!3m2!1szh-CN!2scn!4v1444282277303"
-            height="350"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6483.911830354407!2d139.69859487544412!3d35.65345777080295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6ddae90f517267e3!2sSumitomo+Fud%C5%8Dsan%2C+Shibuya+First+Tower!5e0!3m2!1sen!2sjp!4v1538357779433" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
 </div>
 <div id="foot">
     <script>
