--- a/src/main/webapp/foot.html
+++ b/src/main/webapp/foot.html
@@ -1,8 +1,8 @@
 <div class="copyright text-center">
     <div class="container">
-        <p>Made by Meng Li. <a href="/admin" target="_blank">Manage My Blog</a></p>
+        <p>Made by Meng Li. <a href="/admin/index.html" target="_blank">Manage My Blog</a></p>
         <label>
-            <span>Copyright of Meng Li © 2014 - 2017. All rights reserved.</span>
+            <span>Copyright of Meng Li © 2014 - 2018. All rights reserved.</span>
             <a href="http://www.miibeian.gov.cn/" target="_blank">鄂ICP备15010075号-1</a></label>
     </div>
 </div>
